deploy: 1a4ac724a398284b666bf3528c5c404ba2c466f7

--- a/html/index.html
+++ b/html/index.html
@@ -76,12 +76,18 @@ Algorithm</h1>
 <div class="line">    T(s,e,m,n)</div>
 <div class="line">    Move the bottom-most disk from s to e</div>
 <div class="line">    T(m,e,s,n)</div>
-</div><!-- fragment --><p> The program must terminate, and the only limitation is <code>ndisk</code> being too large, causing a stack overflow in the recursive function call. </p>
+</div><!-- fragment --><p> The program must terminate, and the only limitation is <code>ndisk</code> being too large, causing a stack overflow in the recursive function call.</p>
 <h1><a class="anchor" id="autotoc_md3"></a>
+Input</h1>
+<p>An integer <code>ndisk</code> that specify the number of disk to solve for.</p>
+<h1><a class="anchor" id="autotoc_md4"></a>
+Output</h1>
+<p>Step-by-step instruction on how to solve the puzzle.</p>
+<h1><a class="anchor" id="autotoc_md5"></a>
 Compile</h1>
 <p>Run <code>make all</code> to make all</p>
 <p>To clean the object files, run <code>make clean</code></p>
-<h1><a class="anchor" id="autotoc_md4"></a>
+<h1><a class="anchor" id="autotoc_md6"></a>
 Testing</h1>
 <p>To compile the unit test module <code>make unit_test</code></p>
 <p>To run the test <code>make testing</code> </p>
